AppBarの色を変えた。

--- a/Metrica/Metrica/pages/home/home.html
+++ b/Metrica/Metrica/pages/home/home.html
@@ -112,7 +112,7 @@
         </section>
 
         <!-- AppBar -->
-        <div id="appbar" data-win-control="WinJS.UI.AppBar">
+        <div id="appbar" data-win-control="WinJS.UI.AppBar" class="win-ui-dark">
             <!-- selection -->
             <button data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section:'selection', icon:'comment', id:'cmdSetTopic', label:'Set Topic', disabled:true, type:'flyout', flyout:'flyoutSetTopic'}"></button>
             <button data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section:'selection', icon:'remove', id:'cmdPart', label:'Part', disabled:true, type:'flyout', flyout:'flyoutPartChannel'}"></button>
