flyoutのJavaScriptファイルを別ファイルに分けた。

--- a/Metrica/Metrica/pages/flyoutChannelMembers/flyoutChannelMembers.html
+++ b/Metrica/Metrica/pages/flyoutChannelMembers/flyoutChannelMembers.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Channel Members Flyout</title>
-
+        <script src="/pages/flyoutChannelMembers/flyoutChannelMembers.js"></script>
     </head>
     <body>
         <div data-win-control="WinJS.UI.SettingsFlyout"
@@ -29,24 +29,5 @@
                 </div>
             </div>
         </div>
-        <script>
-            WinJS.Namespace.define('Metrica.UI.Pages.ChannelMembers', {
-                  flyout: null
-                , onBeforeShowHandler: function (event) {
-                    Metrica.UI.Pages.ChannelMembers.flyout = this.winControl;
-
-                    var homeFragment = document.querySelector('.fragment').parentElement.winControl;
-                    var membersListView = document.querySelector('#members').winControl;
-                    if (window.intellisense) membersListView = new WinJS.UI.ListView();
-                    membersListView.layout = new WinJS.UI.ListLayout();
-                    membersListView.itemDataSource = homeFragment._currentChannel.members.dataSource;
-                    membersListView.itemTemplate = document.querySelector('#templateMembersListViewItem');
-                }
-                , onAfterShowHandler: function (event) {
-                }
-            });
-            Metrica.UI.Pages.ChannelMembers.onBeforeShowHandler.supportedForProcessing = true;
-            Metrica.UI.Pages.ChannelMembers.onAfterShowHandler.supportedForProcessing = true;
-        </script>
     </body>
 </html>
