--- a/Metrica/Metrica/pages/home/home.html
+++ b/Metrica/Metrica/pages/home/home.html
@@ -5,9 +5,9 @@
     <title>homePage</title>
     
     <!-- WinJS references -->
-    <link href="//Microsoft.WinJS.1.0.RC/css/ui-light.css" rel="stylesheet" />
-    <script src="//Microsoft.WinJS.1.0.RC/js/base.js"></script>
-    <script src="//Microsoft.WinJS.1.0.RC/js/ui.js"></script>
+    <link href="//Microsoft.WinJS.1.0/css/ui-light.css" rel="stylesheet" />
+    <script src="//Microsoft.WinJS.1.0/js/base.js"></script>
+    <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
     
     <script src="/js/metrica.js"></script>
     <script src="/js/dummyData.js"></script>
