--- a/Metrica/Metrica/default.html
+++ b/Metrica/Metrica/default.html
@@ -14,6 +14,7 @@
     <script src="/js/default.js"></script>
     <script src="/js/navigator.js"></script>
     <script src="/js/metrica.js"></script>
+    <script src="/js/metrica.utilities.js"></script>
 </head>
 <body>
     <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/home/home.html'}"></div>
